--- a/angular-app/staticwebapp.config.json
+++ b/angular-app/staticwebapp.config.json
@@ -1,6 +1,16 @@
+
 {
-  "navigationFallback": {
-    "rewrite": "/index.html",
-    "exclude": ["*.{css,scss,js,png,gif,ico,jpg,svg}"]
-  }
+  "routes": [
+     {
+     "route": "/index.html",
+     "rewrite": "/down.html",
+     "allowedRoles": ["anonymous"]
+     "statusCode": 307
+    },
+    {
+     "route": "/test/",
+     "rewrite": "/down.html",
+    }
+    
+    ]
 }
