--- a/angular-app/staticwebapp.config.json
+++ b/angular-app/staticwebapp.config.json
@@ -1,4 +1,3 @@
-
 {
   "routes": [
      {
@@ -7,10 +6,12 @@
      "allowedRoles": ["anonymous"]
      "statusCode": 307
     },
-    {
-     "route": "/test/",
-     "rewrite": "/down.html",
-    }
+    "routes": [
+     {
+     "route": "/products",
+     "allowedRoles": ["anonymous"]
+     
+    },
     
     ]
 }
